--- a/resources/assets/sass/casino/featured.scss
+++ b/resources/assets/sass/casino/featured.scss
@@ -7,9 +7,15 @@
   padding: 20px 0;
   border-radius: $border-radius $border-radius 0 0;
 
+  @import "game";
+
   .game {
     margin-left: 35px;
+  }
+}
 
-    @extend .game;
+@media (max-width: $mobile-screen-width) {
+  .featured {
+    display: none;
   }
 }
