--- a/resources/assets/js/perfil/templates/history_bet_details.html
+++ b/resources/assets/js/perfil/templates/history_bet_details.html
@@ -15,7 +15,7 @@
         <span class="pushed"><i class="cp-refresh"></i></span>
         {{/if_eq}}
         {{#if_eq status "returned"}}
-        <span class="pushed"><i class="cp-history"></i></span>
+        <span class="returned"><i class="cp-history"></i></span>
         {{/if_eq}}
         {{#if_eq status "lost"}}
         <span class="loss"><i class="cp-times-circle"></i></span>
