ref #330: games mobile css

--- a/resources/assets/sass/casino/game.scss
+++ b/resources/assets/sass/casino/game.scss
@@ -99,15 +99,16 @@
   .game {
     width: calc(33% - 25px);
 
-    .name {
-      @include truncate(calc(100% - 27px));
+    .name, a {
+      display: none;
     }
+
     img {
         width: 100%;
         height: auto !important;
     }
 
-    .play, .demo {
+    .play, .demo, .tag {
       display: none;
     }
   }
