--- a/resources/assets/sass/info/info.scss
+++ b/resources/assets/sass/info/info.scss
@@ -138,6 +138,7 @@
     .info {
         border: 0;
         border-radius: 0;
+        width: 100%;
 
         .links {
             display: none;
