--- a/resources/assets/sass/sportsMenu/sportsMenu.scss
+++ b/resources/assets/sass/sportsMenu/sportsMenu.scss
@@ -1,6 +1,8 @@
 @import '../global/variables';
 
 .sportsMenu {
+    margin-top: 4px;
+
     .sport {
         font-family: $font-exo;
         font-size: 18px;
