--- a/resources/assets/sass/common/mobile-search-bar.scss
+++ b/resources/assets/sass/common/mobile-search-bar.scss
@@ -1,7 +1,7 @@
 .mobile-search-bar {
   background: #1e293e;
   padding: 10px;
-  margin-top: 10px;
+  margin-top: 8px;
   font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
 
   form {
@@ -9,15 +9,15 @@
       width: 100%;
       font-size: 12px;
       height: 30px;
-      background: #101928;
+      background: #fff;
       font-weight: bold;
       border-radius: 0 !important;
       text-align: center;
       border: 0;
-      color: #cccccc;
+      color: #000;
 
       &::placeholder, &::-webkit-input-placeholder {
-        color: #cccccc;
+        color: #000;
         font-weight: normal;
       }
     }
