--- a/resources/assets/sass/common/promotions.scss
+++ b/resources/assets/sass/common/promotions.scss
@@ -8,6 +8,7 @@
         background-color: #4a7fb3;
         border-radius: 6px 6px 0 0;
         height: 42px;
+        color: #FFF;
 
         .title {
             font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
@@ -153,6 +154,14 @@
             &:last-of-type hr {
                 display: none;
             };
+        }
+    }
+}
+
+@media (max-width: $mobile-screen-width) {
+    .promotions {
+        .header {
+            border-radius: 0;
         }
     }
 }
