--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -40,5 +40,6 @@
 @import 'common/mobile-login';
 @import 'common/mobile-menu';
 @import 'common/bigodd';
+@import 'common/mobile-left-menu-header';
 
 
