--- a/resources/assets/sass/casino/left-menu.scss
+++ b/resources/assets/sass/casino/left-menu.scss
@@ -62,10 +62,12 @@
         float: right;
         font-size: 16px;
         line-height: 24px;
+        width: auto;
       }
 
       .cp-caret-right {
         display: none;
+        width: auto;
       }
 
       &.selected {
