ref #330: fade transitions

--- a/resources/assets/sass/casino.scss
+++ b/resources/assets/sass/casino.scss
@@ -22,6 +22,8 @@
 @import 'common/cpIcons';
 @import 'common/cpHelpers';
 
+@import 'common/vue-transitions';
+
 @import 'common/promotions';
 
 @import 'common/mobile-header';
