--- a/resources/assets/sass/casino/mobile-game-launcher.scss
+++ b/resources/assets/sass/casino/mobile-game-launcher.scss
@@ -1,4 +1,5 @@
 .mobile-game-launcher {
+  width: 100%;
   float: left;
   background-color: #2d415c;
   font-family: "Open Sans", "Droid Sans", Verdana, sans-serif;
