--- a/resources/assets/sass/common/mobile-header.scss
+++ b/resources/assets/sass/common/mobile-header.scss
@@ -89,6 +89,10 @@
             color: #fff;
             border: none;
             padding: 8px 5px;
+
+            &.casino-bg {
+              background: #C69A31;
+            }
           }
         }
 
