--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -203,7 +203,7 @@
         }
       }
     }
-    > .row[data-type=sportsbook]:hover {
+    > .row[data-type=sportsbook]:hover, >.row[data-type=casino_session]:hover {
       > div:not(.bag) {
         cursor: pointer;
       }
