--- a/resources/assets/sass/sports/mini-slider.scss
+++ b/resources/assets/sass/sports/mini-slider.scss
@@ -1,9 +1,10 @@
 .mini-slider {
   width:100%;
-  height:230px;
+  height:192px;
   position:relative;
   overflow:hidden;
   margin-bottom: 8px;
+  margin-top: 5px;
 
   @keyframes load{
     from{left:-100%;}
