ref #394: Show/Mask user balance

--- a/resources/assets/sass/casino.scss
+++ b/resources/assets/sass/casino.scss
@@ -33,6 +33,7 @@
 @import 'common/mobile-left-menu-header';
 @import 'common/mobile-search-bar';
 @import 'common/error-panel';
+@import 'common/balance-button';
 
 @import 'casino/mobile-game-launcher';
 
