--- a/resources/assets/sass/common/balance-button.scss
+++ b/resources/assets/sass/common/balance-button.scss
@@ -14,7 +14,7 @@
     text-align: center;
     padding: 6px 0;
 
-    &:hover {
+    &:hover, &:focus {
       color: #FFF;
       text-decoration: none;
     }
