ref #412: fix cookies consent

--- a/resources/assets/sass/casino.scss
+++ b/resources/assets/sass/casino.scss
@@ -34,6 +34,7 @@
 @import 'common/mobile-search-bar';
 @import 'common/error-panel';
 @import 'common/bigodd';
+@import 'common/cookies-consent';
 
 @import 'casino/mobile-game-launcher';
 
