--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -41,6 +41,7 @@
 @import 'common/mobile-menu';
 @import 'common/bigodd';
 @import 'common/mobile-left-menu-header';
+@import 'common/cookies-consent';
 
 @import 'sports/mini-slider';
 
