ref #413: add promotions endurance

--- a/resources/assets/sass/casino.scss
+++ b/resources/assets/sass/casino.scss
@@ -35,6 +35,7 @@
 @import 'common/error-panel';
 @import 'common/bigodd';
 @import 'common/cookies-consent';
+@import 'common/promotions-endurance';
 
 @import 'casino/mobile-game-launcher';
 
