--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -42,6 +42,7 @@
 @import 'common/bigodd';
 @import 'common/mobile-left-menu-header';
 @import 'common/cookies-consent';
+@import 'common/promotions-endurance';
 
 @import 'sports/mini-slider';
 
