--- a/resources/assets/sass/common/cpIcons.scss
+++ b/resources/assets/sass/common/cpIcons.scss
@@ -291,6 +291,9 @@
 .cp-basquete:before {
   content: "\e902";
 }
+.cp-icehockey:before {
+  content: "\e95e";
+}
 .cp-ciclismo:before {
   content: "\e903";
 }
