#419: Adding MB payments without a redirect.

--- a/resources/assets/sass/profile/_bank.scss
+++ b/resources/assets/sass/profile/_bank.scss
@@ -46,7 +46,14 @@
       opacity: 1;
     }
   }
+  #deposit_mb {
+    padding-top: 10px;
+    label {
+      font-weight: bold;
+    }
+  }
   #deposit_tb {
+    padding-top: 10px;
     label {
       font-weight: bold;
     }
