--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -206,11 +206,12 @@
 
           label {
             font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-            font-size: 11px;
+            font-size: 10px;
             width: 40%;
             float: left;
             color: black;
             display: inline-block;
+            white-space: nowrap;
           }
 
           .field {
