--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -61,13 +61,16 @@
             font-size: 12px;
             color: #99ccff;
             outline: none;
-            margin-bottom: 12px;
 
             &:focus,
             &:hover {
               text-decoration: none;
               color: $color-white;
             }
+          }
+
+          > a {
+            margin-bottom: 12px;
           }
         }
       }
