--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -69,8 +69,11 @@
             }
           }
 
-          > a {
+          a {
             margin-bottom: 12px;
+            > a {
+              margin-bottom: 0;
+            }
           }
         }
       }
