--- a/resources/assets/sass/sports.scss
+++ b/resources/assets/sass/sports.scss
@@ -32,6 +32,7 @@
 
 @import 'common/vue-transitions';
 @import 'common/promotions';
+@import 'common/golodeouro';
 @import 'common/mobile-header';
 @import 'common/mobile-betslip-button';
 @import 'common/mobile-up-button';
