--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -724,6 +724,30 @@
         width: 100%;
       }
     }
+    #deposit_mb {
+      padding: 10px 8px 0;
+      label {
+        color: $color-blue;
+        font-size: 13px;
+        padding: 0 12px;
+        font-weight: bold;
+      }
+      .input-group {
+        width: 100%;
+      }
+      input {
+        background: none;
+        border: none;
+        box-shadow: none;
+        color: $color-text-box;
+        font-size: 14px;
+        height: 25px;
+        line-height: 25px;
+        outline: none;
+        padding: 0 12px;
+        width: 100%;
+      }
+    }
   }
 
   .footer {
