--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -1,3 +1,19 @@
+.stats {
+    left: 889px;
+    float: left;
+    color: #fff;
+    width: 310px;
+    height:800px;
+    text-align: center;
+    word-break: break-all;
+    z-index: 100;
+    background: #101928;
+    //-webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    //-moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    //box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.55);
+    transition: all .5s ease;
+    overflow:hidden;
+}
 .betslip {
     left: 889px;
     float: left;
