--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -28,6 +28,7 @@
         padding-top:25px !important;
       }
       .title {
+        font-family: 'Montserrat', sans-serif;
         padding-top:5px;
         padding-left:50px;
         line-height: 100%;
@@ -169,6 +170,7 @@
         clear: both;
     }
      .golodeouro-container .golodeouro-fixture-markets select{
+       color:white;
         width:90%;
         text-align-last:center;
         font-weight:normal;
