--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -3,7 +3,7 @@
   .golodeouro-header-padding{
      
         padding-left: 15px;
-    padding-right: 15px;
+        padding-right: 15px;
     }
      .golodeouro-header{
         background-color:#1e293e;
@@ -229,6 +229,7 @@
     }
 
 .golodeouro-container .golodeouro-bet .flavor {
+  padding-top:20px;
   height:42px;
   width:90%;
   vertical-align:middle;
