--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -230,7 +230,7 @@
 
 .golodeouro-container .golodeouro-bet .flavor {
   padding-top:20px;
-  padding-bottom:20px;
+  margin-bottom:20px;
   height:42px;
   width:90%;
   vertical-align:middle;
@@ -254,7 +254,7 @@
 }
 .golodeouro-container .golodeouro-bet .bet button {
   padding-top:20px;
-  padding-bottom:20px;
+  margin-bottom:20px;
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
   font-weight: bold;
   font-size: 18px;
