--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -289,11 +289,13 @@
 }
 
 .golodeouro-history  .last-golodeouro-left{
+  margin-top:15px;
   float:left;
   font-family: 'Montserrat', sans-serif;
 
 }
 .golodeouro-history  .last-golodeouro-right{
+  margin-top:15px;
   padding-right:20px;
   font-weight:bold;
   float:right;
