--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -253,6 +253,7 @@
 
 }
 .golodeouro-container .golodeouro-bet .bet button {
+  margin-top:15px;
   margin-bottom:20px;
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
   font-weight: bold;
