--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -1,300 +1,267 @@
 .golodeouro {
-
-  .golodeouro-header-padding{
-     
+    .golodeouro-header-padding {
         padding-left: 15px;
-    padding-right: 15px;
+        padding-right: 15px;
     }
-     .golodeouro-header{
-        background-color:#1e293e;
+    .golodeouro-header {
+        background-color: #1e293e;
         font-family: 'Montserrat', sans-serif;
         padding-bottom: 20px;
-   
     }
-
-     .golodeouro-header .header-left{
+    .golodeouro-header .header-left {
         float: left;
-        width:65%;
+        width: 65%;
     }
-      .orange {
-        color:#C69A31;
-      }
-
-      .white {
-        color:#ffffff;
-      }
-
-      .topo {
-        padding-top:25px !important;
-      }
-      .title {
-        padding-top:5px;
-        padding-left:50px;
+    .orange {
+        color: #C69A31;
+    }
+    .white {
+        color: #ffffff;
+    }
+    .topo {
+        padding-top: 25px !important;
+    }
+    .title {
+        padding-top: 5px;
+        padding-left: 50px;
         line-height: 100%;
-        margin:0 !important;  
-      }
-      .title-header {
-        font-weight:780 !important;
-
-      }
-      .title-bold {
-        font-weight:bold !important;
-
-      }
-      
-
-      .title-subtitle {
-        font-weight:500 !important;
-      }
-
-      .title-subtitle-2 {
-        font-weight:bold !important;
-      }
-      
-      
-
-      @media (max-width: 767px) {
+        margin: 0 !important;
+    }
+    .title-header {
+        font-weight: 780 !important;
+        text-shadow: -1px 0 #C69A31, 0 1px #C69A31, 1px 0 #C69A31, 0 -1px #C69A31;
+    }
+    .title-bold {
+        font-weight: bold !important;
+    }
+    .title-subtitle {
+        font-weight: 500 !important;
+    }
+    .title-subtitle-2 {
+        font-weight: bold !important;
+    }
+    @media (max-width: 767px) {
         .small-xs-9 {
-          width: 75%;
-          float: left;
+            width: 75%;
+            float: left;
         }
-       
         .small-xs {
-          font-size: 13px !important;
+            font-size: 13px !important;
         }
         .medium-xs {
-          font-size:16px !important;
+            font-size: 16px !important;
         }
-      
         .big-xs-2 {
-          font-size:38px !important;
-          font-style: italic;
+            font-size: 38px !important;
+            font-style: italic;
         }
-
         .big-xs {
-          font-size:23px !important;
+            font-size: 23px !important;
         }
         .image-xs {
-          width:100px !important;
+            width: 100px !important;
         }
-      }
-      @media (min-width: 768px)  {
+    }
+    @media (min-width: 768px) {
         .small-md {
-          font-size:16px !important;
+            font-size: 16px !important;
         }
         .medium-md {
-          font-size:33px !important;
+            font-size: 33px !important;
         }
-
         .big-md {
-          font-size:38px !important;
+            font-size: 38px !important;
         }
         .image-md {
-          width:168px !important;
+            width: 168px !important;
         }
-      }
-    
-
-
-     .golodeouro-header .header-left .title1{
-        padding-left:50px;
-        padding-top:25px;
-        color:#C69A31;
+    }
+    .golodeouro-header .header-left .title1 {
+        padding-left: 50px;
+        padding-top: 25px;
+        color: #C69A31;
         line-height: 100%;
-        margin:0 !important;
-        font-size:38px !important;
-        font-weight:780 !important;
+        margin: 0 !important;
+        font-size: 38px !important;
+        font-weight: 780 !important;
     }
-     .golodeouro-header .header-left .title2{
-        padding-left:50px;
-        color:white;
+    .golodeouro-header .header-left .title2 {
+        padding-left: 50px;
+        color: white;
         line-height: 100%;
-        font-size:33px !important;
-        font-weight:500 !important;
+        font-size: 33px !important;
+        font-weight: 500 !important;
     }
-     .golodeouro-header .header-left .title3{
-        padding-left:50px;
-        color:white;
+    .golodeouro-header .header-left .title3 {
+        padding-left: 50px;
+        color: white;
         line-height: 100%;
-        font-size:45px !important;
-        font-weight:bold !important;
-
+        font-size: 45px !important;
+        font-weight: bold !important;
     }
-     .golodeouro-header .header-left .title4{
-        padding-left:50px;
-        color:white;
+    .golodeouro-header .header-left .title4 {
+        padding-left: 50px;
+        color: white;
         line-height: 100%;
-        font-size:13px !important;
-        font-weight:bold !important;
-
+        font-size: 13px !important;
+        font-weight: bold !important;
     }
-     .golodeouro-header .header-right{
-        float:left;
-        width:35%;
+    .golodeouro-header .header-right {
+        float: left;
+        width: 35%;
     }
-     .golodeouro-header .header-right .image{
-        padding-top:5px;
+    .golodeouro-header .header-right .image {
+        padding-top: 5px;
     }
-
-     .golodeouro-container{
-        margin-top:10px;
-        background-color:#1e293e;
+    .golodeouro-container {
+        margin-top: 10px;
+        background-color: #1e293e;
         font-family: 'Montserrat', sans-serif;
         padding-bottom: 15px;
     }
     .select-golodeouro {
-      padding-bottom: 15px;
-  }
-
-     .golodeouro-container .golodeouro-fixture-title{
-        padding-top:20px;
-        font-weight:bold;
-        color:white;
-        font-size:22px;
-        text-align:center;
+        padding-bottom: 15px;
     }
-     .golodeouro-container .golodeouro-fixture-time{
-        padding-top:10px;
-        font-weight:bold;
-        color:white;
-        font-size:15px;
-        text-align:center;
+    .golodeouro-container .golodeouro-fixture-title {
+        padding-top: 20px;
+        font-weight: bold;
+        color: white;
+        font-size: 22px;
+        text-align: center;
     }
-     .golodeouro-container .golodeouro-fixture-markets {
-        padding-top:20px;
+    .golodeouro-container .golodeouro-fixture-time {
+        padding-top: 10px;
+        font-weight: bold;
+        color: white;
+        font-size: 15px;
+        text-align: center;
+    }
+    .golodeouro-container .golodeouro-fixture-markets {
+        padding-top: 20px;
         padding-left: 10px;
-        font-weight:bold;
-        color:white;
-        text-align:center;
+        font-weight: bold;
+        color: white;
+        text-align: center;
         clear: both;
     }
-     .golodeouro-container .golodeouro-fixture-markets select{
-        width:90%;
-        text-align-last:center;
-        font-weight:normal;
-        font-size:13px;
-        padding-left:5px;
-        padding-right:5px;
-        border-radius:0 !important;
-        height:40px;
-        -webkit-appearance:none;
+    .golodeouro-container .golodeouro-fixture-markets select {
+        width: 90%;
+        text-align-last: center;
+        font-weight: normal;
+        font-size: 13px;
+        padding-left: 5px;
+        padding-right: 5px;
+        border-radius: 0 !important;
+        height: 40px;
+        -webkit-appearance: none;
         background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
-
     }
-
-     .golodeouro-container .golodeouro-fixture-markets select option {
-       font-family: 'Montserrat', sans-serif;
-        width:30%!important;
-        text-align-last:center!important;
-        height:40px!important;
-        font-weight:normal;
-        background-color:white;
+    .golodeouro-container .golodeouro-fixture-markets select option {
+        font-family: 'Montserrat', sans-serif;
+        width: 30%!important;
+        text-align-last: center!important;
+        height: 40px!important;
+        font-weight: normal;
+        background-color: white;
         color: black;
-        border:none;
+        border: none;
     }
 }
+
 .golodeouro-container .golodeouro-bet {
-  padding-left: 10px;
-        font-weight:bold;
-        color:white;
-        text-align:center;
-        clear: both;
-        z-index: -1;
-    }
-     .golodeouro-container .golodeouro-bet select{
-        width:100%;
-        text-align-last:center;
-        font-weight:normal;
-        font-size:13px;
-        padding-left:5px;
-        padding-right:5px;
-        border-radius:0 !important;
-        height:40px;
-        -webkit-appearance:none;
-        background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
+    padding-left: 10px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    clear: both;
+    z-index: -1;
+}
 
-    }
+.golodeouro-container .golodeouro-bet select {
+    width: 100%;
+    text-align-last: center;
+    font-weight: normal;
+    font-size: 13px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 0 !important;
+    height: 40px;
+    -webkit-appearance: none;
+    background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
+}
 
-     .golodeouro-container .golodeouro-bet select option {
-       font-family: 'Montserrat', sans-serif;
-        width:30%!important;
-        text-align-last:center!important;
-        height:40px!important;
-        font-weight:normal;
-        background-color:white;
-        color: black;
-        border:none;
-    }
+.golodeouro-container .golodeouro-bet select option {
+    font-family: 'Montserrat', sans-serif;
+    width: 30%!important;
+    text-align-last: center!important;
+    height: 40px!important;
+    font-weight: normal;
+    background-color: white;
+    color: black;
+    border: none;
+}
 
 .golodeouro-container .golodeouro-bet .flavor {
-  height:42px;
-  width:90%;
-  vertical-align:middle;
-  display: inline-block;
-  font-weight:bold;
-  color:white;
-  font-size:16px !important;
-
+    height: 42px;
+    width: 90%;
+    vertical-align: middle;
+    display: inline-block;
+    font-weight: bold;
+    color: white;
+    font-size: 16px !important;
 }
-.golodeouro-container .golodeouro-bet .value{
 
-  color:#C69A31;
-  display:inline-block;
-
+.golodeouro-container .golodeouro-bet .value {
+    color: #C69A31;
+    display: inline-block;
 }
-.golodeouro-container .golodeouro-bet .bet{
 
-  width:90%;
-
-
+.golodeouro-container .golodeouro-bet .bet {
+    width: 90%;
 }
+
 .golodeouro-container .golodeouro-bet .bet button {
-
-  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  color: #FFF;
-  width: 100%;
-
-  height: 40px;
-  border: 0;
-  background-color:#71aa30;
-
+    font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    color: #FFF;
+    width: 100%;
+    height: 40px;
+    border: 0;
+    background-color: #71aa30;
 }
 
- .golodeouro-history{
-   font-size:15px;
-  padding-left:15px;
-   padding-top:15px;
-  margin-top:12px;
-  background-color:#1e293e;
-  font-family: 'Montserrat', sans-serif;
-  height:220px;
-
-}
-.golodeouro-history .whitebar{
-  padding-top:5px;
-  width:95%;
-  border-bottom: 1px solid rgba(255,255,255,225);
+.golodeouro-history {
+    font-size: 15px;
+    padding-left: 15px;
+    padding-top: 15px;
+    margin-top: 12px;
+    background-color: #1e293e;
+    font-family: 'Montserrat', sans-serif;
+    height: 220px;
 }
 
-.golodeouro-history .last-golodeouro-header{
-  float:left;
-  font-family: 'Montserrat', sans-serif;
-
+.golodeouro-history .whitebar {
+    padding-top: 5px;
+    width: 95%;
+    border-bottom: 1px solid rgba(255, 255, 255, 225);
 }
 
-.golodeouro-history  .last-golodeouro-left{
-  float:left;
-  font-family: 'Montserrat', sans-serif;
-
+.golodeouro-history .last-golodeouro-header {
+    float: left;
+    font-family: 'Montserrat', sans-serif;
 }
-.golodeouro-history  .last-golodeouro-right{
-  padding-right:20px;
-  font-weight:bold;
-  float:right;
-  font-family: 'Montserrat', sans-serif;
 
+.golodeouro-history .last-golodeouro-left {
+    float: left;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.golodeouro-history .last-golodeouro-right {
+    padding-right: 20px;
+    font-weight: bold;
+    float: right;
+    font-family: 'Montserrat', sans-serif;
 }
 
 @media (max-width: $mobile-screen-width) {
@@ -304,5 +271,3 @@
         }
     }
 }
-
-
