#462 add migration + layout

--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -237,8 +237,8 @@
     width: 90%;
 }
 .golodeouro-container .golodeouro-bet .bet button {
-  margin-top:15px;
-  margin-bottom:20px;
+  margin-top: 15px;
+  margin-bottom: 20px;
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
   font-weight: bold;
   font-size: 18px;
@@ -247,8 +247,8 @@
 
   height: 40px;
   border: 0;
-  background-color:#71aa30;
-
+  background-color: #71aa30;
+}
 .golodeouro-container .golodeouro-bet .bet button {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     font-weight: bold;
@@ -282,22 +282,22 @@
     border-bottom: 1px solid rgba(255, 255, 255, 225);
 }
 
-.golodeouro-history  .last-golodeouro-left{
-  margin-top:15px;
-  float:left;
+.golodeouro-history  .last-golodeouro-left {
+  margin-top: 15px;
+  float: left;
   font-family: 'Montserrat', sans-serif;
-
+}
 .golodeouro-history .last-golodeouro-left {
     float: left;
     font-family: 'Montserrat', sans-serif;
 }
-.golodeouro-history  .last-golodeouro-right{
-  margin-top:15px;
-  padding-right:20px;
-  font-weight:bold;
-  float:right;
+.golodeouro-history  .last-golodeouro-right {
+  margin-top: 15px;
+  padding-right: 20px;
+  font-weight: bold;
+  float: right;
   font-family: 'Montserrat', sans-serif;
-
+}
 .golodeouro-history .last-golodeouro-right {
     padding-right: 20px;
     font-weight: bold;
