--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -236,7 +236,7 @@
     width: 90%;
 }
 .golodeouro-container .golodeouro-bet .bet button {
-  margin-bottom: 20px;
+  padding-bottom: 20px;
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
   font-weight: bold;
   font-size: 18px;
