--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -307,5 +307,8 @@
         .golodeouro-header {
             border-radius: 0;
         }
+      .flavor-xs{
+        padding-top:20px;
+      }
     }
 }
