--- a/resources/assets/sass/common/golodeouro.scss
+++ b/resources/assets/sass/common/golodeouro.scss
@@ -141,7 +141,7 @@
     .golodeouro-container {
         margin-top: 10px;
         background-color: #1e293e;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Open Sans', sans-serif;
         padding-bottom: 15px;
     }
     .select-golodeouro {
@@ -183,7 +183,7 @@
         background: url("/assets/portal/img/combodown.gif") no-repeat right #1e293e !important;
     }
     .golodeouro-container .golodeouro-fixture-markets select option {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Open Sans', sans-serif;
         width: 30%!important;
         text-align-last: center!important;
         height: 40px!important;
@@ -217,7 +217,7 @@
 }
 
 .golodeouro-container .golodeouro-bet select option {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     width: 30%!important;
     text-align-last: center!important;
     height: 40px!important;
@@ -275,7 +275,7 @@
    padding-top:15px;
   margin-top:12px;
   background-color:#1e293e;
-  font-family: 'Montserrat', sans-serif;
+   font-family: 'Open Sans', sans-serif;
   height:196px;
 
 }
@@ -294,24 +294,24 @@
 .golodeouro-history  .last-golodeouro-left {
   margin-top: 15px;
   float: left;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .golodeouro-history .last-golodeouro-left {
     float: left;
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .golodeouro-history  .last-golodeouro-right {
   margin-top: 15px;
   padding-right: 20px;
   font-weight: bold;
   float: right;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 .golodeouro-history .last-golodeouro-right {
     padding-right: 20px;
     font-weight: bold;
     float: right;
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 @media (max-width: $mobile-screen-width) {
